@@ -43,4 +43,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += [
+            "--add-opens=java.base/java.math=ALL-UNNAMED"
+    ]
 }
